@@ -10,9 +10,7 @@ import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
 import org.matsim.api.core.v01.network.Node;
 import org.matsim.application.MATSimAppCommand;
-import org.matsim.application.MATSimApplication;
 import org.matsim.application.options.ShpOptions;
-import org.matsim.application.prepare.network.CleanNetwork;
 import org.matsim.core.network.NetworkUtils;
 import org.matsim.core.network.algorithms.MultimodalNetworkCleaner;
 import org.matsim.core.network.algorithms.NetworkCleaner;
@@ -20,6 +18,7 @@ import org.matsim.core.utils.geometry.geotools.MGC;
 import org.opengis.feature.simple.SimpleFeature;
 import picocli.CommandLine;
 
+import java.nio.file.Path;
 import java.util.*;
 
 @CommandLine.Command(
@@ -51,116 +50,116 @@ public class PrepareNetwork implements MATSimAppCommand {
         return 0;
     }
 
-    static void prepareDRT(Network network, ShpOptions shp) {
+    /**
+     * Adapt network to one or more drt service areas. Therefore, a shape file of the wished service area + a list
+     * of drt modes are needed.
+     */
 
-        boolean cityAreaNetwork = false;
-        String modes = "drt";
+    static void prepareDRT(Network network, ShpOptions shp, String modes) {
 
         Set<String> modesToAdd = new HashSet<>(Arrays.asList(modes.split(",")));
         Geometry drtOperationArea = null;
         Geometry avOperationArea = null;
-        Geometry cityArea = null;
+
         List<SimpleFeature> features = shp.readFeatures();
         for (SimpleFeature feature : features) {
-            if (!cityAreaNetwork) {
-                if (feature.getAttribute("mode").equals("drt")) {
-                    if (drtOperationArea == null) {
-                        drtOperationArea = (Geometry) feature.getDefaultGeometry();
-                    } else {
-                        drtOperationArea = drtOperationArea.union((Geometry) feature.getDefaultGeometry());
-                    }
+            if (feature.getAttribute("mode").equals("drt")) {
+                if (drtOperationArea == null) {
+                    drtOperationArea = (Geometry) feature.getDefaultGeometry();
                 } else {
-                    drtOperationArea = avOperationArea.getFactory().createPoint();
-                    cityArea = drtOperationArea;
+                    drtOperationArea = drtOperationArea.union((Geometry) feature.getDefaultGeometry());
                 }
-
-                if (feature.getAttribute("mode").equals("av")) {
-                    if (avOperationArea == null) {
-                        avOperationArea = (Geometry) feature.getDefaultGeometry();
-                    } else {
-                        avOperationArea = avOperationArea.union((Geometry) feature.getDefaultGeometry());
-                    }
-                } else {
-                    avOperationArea = drtOperationArea.getFactory().createPoint();
-                    cityArea = avOperationArea;
-                    System.out.println(avOperationArea);
-                }
-
             } else {
-                if (cityArea == null) {
-                    cityArea = (Geometry) feature.getDefaultGeometry();
+                drtOperationArea = avOperationArea.getFactory().createPoint();
+            }
+
+            if (feature.getAttribute("mode").equals("av")) {
+                if (avOperationArea == null) {
+                    avOperationArea = (Geometry) feature.getDefaultGeometry();
                 } else {
-                    cityArea = cityArea.union((Geometry) feature.getDefaultGeometry());
+                    avOperationArea = avOperationArea.union((Geometry) feature.getDefaultGeometry());
                 }
-                drtOperationArea = avOperationArea = cityArea.getFactory().createPoint();
+            } else {
+                avOperationArea = drtOperationArea.getFactory().createPoint();
+                System.out.println(avOperationArea);
             }
         }
 
-        Map<Id<Node>, Node> cityNodes = new HashMap<>();
-        Map<Id<Link>, Link> cityLinks = new HashMap<>();
-
         for (Link link : network.getLinks().values()) {
-            if(!cityAreaNetwork) {
-                if (!link.getAllowedModes().contains("car")){
-                    continue;
-                }
-            } else {
-                if (!(link.getAllowedModes().contains("car") || link.getAllowedModes().contains("bike"))){
-                    continue;
-                }
+            if (!link.getAllowedModes().contains("car")){
+                continue;
             }
 
             boolean isDrtAllowed = MGC.coord2Point(link.getFromNode().getCoord()).within(drtOperationArea) &&
                     MGC.coord2Point(link.getToNode().getCoord()).within(drtOperationArea);
             boolean isAvAllowed = MGC.coord2Point(link.getFromNode().getCoord()).within(avOperationArea) &&
                     MGC.coord2Point(link.getToNode().getCoord()).within(avOperationArea);
+
+            if (isDrtAllowed) {
+                Set<String> allowedModes = new HashSet<>(link.getAllowedModes());
+                allowedModes.addAll(modesToAdd);
+                link.setAllowedModes(allowedModes);
+            }
+
+            if (isAvAllowed) {
+                Set<String> allowedModes = new HashSet<>(link.getAllowedModes());
+                allowedModes.addAll(modesToAdd);
+                link.setAllowedModes(allowedModes);
+            }
+        }
+            MultimodalNetworkCleaner multimodalNetworkCleaner = new MultimodalNetworkCleaner(network);
+            multimodalNetworkCleaner.run(modesToAdd);
+    }
+
+    /**
+     * Cut out network inside a shape which must be provided.
+     */
+
+    static void prepareCityArea(Network network, ShpOptions shp) {
+        Geometry cityArea = null;
+
+        for(SimpleFeature feature : shp.readFeatures()) {
+            if (cityArea == null) {
+                cityArea = (Geometry) feature.getDefaultGeometry();
+            } else {
+                cityArea = cityArea.union((Geometry) feature.getDefaultGeometry());
+            }
+        }
+        Map<Id<Node>, Node> cityNodes = new HashMap<>();
+        Map<Id<Link>, Link> cityLinks = new HashMap<>();
+
+        for (Link link : network.getLinks().values()) {
+            if (!(link.getAllowedModes().contains("car") || link.getAllowedModes().contains("bike"))){
+                continue;
+            }
+
             boolean isInsideCityArea = MGC.coord2Point(link.getFromNode().getCoord()).within(cityArea) &&
                     MGC.coord2Point(link.getToNode().getCoord()).within(cityArea);
 
+            if(isInsideCityArea) {
+                cityNodes.putIfAbsent(link.getFromNode().getId(), link.getFromNode());
+                cityNodes.putIfAbsent(link.getToNode().getId(), link.getToNode());
 
-            if(!cityAreaNetwork) {
-                if (isDrtAllowed) {
-                    Set<String> allowedModes = new HashSet<>(link.getAllowedModes());
-                    allowedModes.addAll(modesToAdd);
-                    link.setAllowedModes(allowedModes);
-                }
-
-                if (isAvAllowed) {
-                    Set<String> allowedModes = new HashSet<>(link.getAllowedModes());
-                    allowedModes.addAll(modesToAdd);
-                    link.setAllowedModes(allowedModes);
-                }
-            } else {
-                if(isInsideCityArea) {
-                    cityNodes.putIfAbsent(link.getFromNode().getId(), link.getFromNode());
-                    cityNodes.putIfAbsent(link.getToNode().getId(), link.getToNode());
-
-                    cityLinks.putIfAbsent(link.getId(), link);
-                }
+                cityLinks.putIfAbsent(link.getId(), link);
             }
         }
 
-        if (cityAreaNetwork) {
-            Network cityNetwork = NetworkUtils.createNetwork();
-            cityNodes.values().forEach(cityNetwork::addNode);
-            cityLinks.values().forEach(cityNetwork::addLink);
+        Network cityNetwork = NetworkUtils.createNetwork();
+        cityNodes.values().forEach(cityNetwork::addNode);
+        cityLinks.values().forEach(cityNetwork::addLink);
 
-            NetworkCleaner networkCleaner = new NetworkCleaner();
-            networkCleaner.run(cityNetwork);
+        NetworkCleaner networkCleaner = new NetworkCleaner();
+        networkCleaner.run(cityNetwork);
 
-        } else {
-            MultimodalNetworkCleaner multimodalNetworkCleaner = new MultimodalNetworkCleaner(network);
-            multimodalNetworkCleaner.run(modesToAdd);
-        }
 
     }
 
     /**
      * Adapt network to one or more car-free zones. Therefore, a shape file of the wished car-free area is needed.
      */
-    static void prepareCarFree(Network network, ShpOptions shp) {
+    static void prepareCarFree(Network network, ShpOptions shp, String modes) {
 
-        Set<String> modes = Set.of(TransportMode.car);
+        Set<String> modesToRemove = new HashSet<>(Arrays.asList(modes.split(",")));
 
 	    Geometry carFreeArea = shp.getGeometry();
         GeometryFactory gf = new GeometryFactory();
@@ -181,7 +180,7 @@ public class PrepareNetwork implements MATSimAppCommand {
             if (isInsideCarFreeZone) {
                 Set<String> allowedModes = new HashSet<>(link.getAllowedModes());
 
-                for( String mode : modes) {
+                for( String mode : modesToRemove) {
                     allowedModes.remove(mode);
                 }
                 link.setAllowedModes(allowedModes);
@@ -189,13 +188,18 @@ public class PrepareNetwork implements MATSimAppCommand {
         }
 
         MultimodalNetworkCleaner multimodalNetworkCleaner = new MultimodalNetworkCleaner(network);
-        modes.forEach(m -> multimodalNetworkCleaner.run(Set.of(m)));
+        modesToRemove.forEach(m -> multimodalNetworkCleaner.run(Set.of(m)));
 
     }
 
-    static void prepareParking(Network network, ShpOptions shp) {
+    /**
+     * Add parking information to network links. Therefore, a shape file of the wished parking area is needed + parking capacities information.
+     * To create parking capacities based on matsim runs see @ParkedVehiclesAnalysis.
+     */
+    static void prepareParking(Network network, ShpOptions shp, Path inputParkingCapacities, Double firstHourParkingCost, Double extraHourParkingCost) {
 
-
+        ParkingNetworkWriter writer = new ParkingNetworkWriter(network, shp, inputParkingCapacities, firstHourParkingCost, extraHourParkingCost);
+        writer.addParkingInformationToLinks();
     }
 
 }
